test/log/conversion/vextend_v_u32.txt
vextend_v_u32.c:10:2: warning: multi-line comment [-Wcomment]
   10 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vextend_v_u32.c:12:44: warning: backslash and newline separated by space
   12 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vextend_v_u32.c:31:6: warning: no previous prototype for 'vextend_v_u32_golden' [-Wmissing-prototypes]
   31 | void vextend_v_u32_golden(uint32_t *a,uint64_t exp_result[][ELE_NUM]) {
      |      ^~~~~~~~~~~~~~~~~~~~
vextend_v_u32.c: In function 'vextend_v_u32_golden':
vextend_v_u32.c:32:1: error: unknown type name 'Operator'
   32 | Operator Line --- TODO
      | ^~~~~~~~
vextend_v_u32.c:32:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   32 | Operator Line --- TODO
      |               ^~
vextend_v_u32.c:36:5: warning: 'main' is normally a non-static function [-Wmain]
   36 | int main(void) {
      |     ^~~~
vextend_v_u32.c: In function 'main':
vextend_v_u32.c:38:17: warning: declaration of 'a' shadows a parameter [-Wshadow]
   38 |     uint32x16_t a;
      |                 ^
vextend_v_u32.c:31:37: note: shadowed declaration is here
   31 | void vextend_v_u32_golden(uint32_t *a,uint64_t exp_result[][ELE_NUM]) {
      |                           ~~~~~~~~~~^
vextend_v_u32.c:42:14: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   42 |     uint64_t exp_result[2][8] = {0};
      |              ^~~~~~~~~~
vextend_v_u32.c:31:48: note: shadowed declaration is here
   31 | void vextend_v_u32_golden(uint32_t *a,uint64_t exp_result[][ELE_NUM]) {
      |                                       ~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
vextend_v_u32.c:47:32: warning: passing argument 2 of 'vextend_v_u32_golden' from incompatible pointer type [-Wincompatible-pointer-types]
   47 |     vextend_v_u32_golden(exp_a,exp_result);
      |                                ^~~~~~~~~~
      |                                |
      |                                uint64_t (*)[8] {aka long long unsigned int (*)[8]}
vextend_v_u32.c:31:48: note: expected 'uint64_t (*)[16]' {aka 'long long unsigned int (*)[16]'} but argument is of type 'uint64_t (*)[8]' {aka 'long long unsigned int (*)[8]'}
   31 | void vextend_v_u32_golden(uint32_t *a,uint64_t exp_result[][ELE_NUM]) {
      |                                       ~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
vextend_v_u32.c:50:14: warning: implicit declaration of function 'vextend_v_u32'; did you mean 'vext_v_u32'? [-Wimplicit-function-declaration]
   50 |     result = vextend_v_u32(a);
      |              ^~~~~~~~~~~~~
      |              vext_v_u32
vextend_v_u32.c:50:14: error: incompatible types when assigning to type 'uint64x8x2_t' from type 'int'
vextend_v_u32.c:54:35: error: subscripted value is neither array nor pointer nor vector
   54 |         if(exp_result[i] != result[i]) {
      |                                   ^
vextend_v_u32.c:55:79: error: subscripted value is neither array nor pointer nor vector
   55 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                                               ^
vextend_v_u32.c:41:18: warning: variable 'result' set but not used [-Wunused-but-set-variable]
   41 |     uint64x8x2_t result = {0};
      |                  ^~~~~~
vextend_v_u32.c: In function 'vextend_v_u32_golden':
vextend_v_u32.c:70:1: error: expected declaration or statement at end of input
   70 | }
      | ^
vextend_v_u32.c:31:37: warning: unused parameter 'a' [-Wunused-parameter]
   31 | void vextend_v_u32_golden(uint32_t *a,uint64_t exp_result[][ELE_NUM]) {
      |                           ~~~~~~~~~~^
vextend_v_u32.c:31:48: warning: unused parameter 'exp_result' [-Wunused-parameter]
   31 | void vextend_v_u32_golden(uint32_t *a,uint64_t exp_result[][ELE_NUM]) {
      |                                       ~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
At top level:
vextend_v_u32.c:36:5: warning: 'main' defined but not used [-Wunused-function]
   36 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vextend_v_u32.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vextend_v_u32"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vextend_v_u32.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vextend_v_u32.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed